<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <Spinner
        android:id="@+id/dynamic_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_allgemeines"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_allgemeines" />
        <item
            android:id="@+id/nav_uebersicht"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_uebersicht" />
        <item
            android:id="@+id/nav_checkliste"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_checkliste" />
    </group>

</menu>
