<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.christian_heinisch.petcheck.AllgemeinesFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/abstand"
            android:paddingTop="@dimen/abstand">

            <TextView
                android:id="@+id/text_allgemeines_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/allgemeines_title"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <ImageView
                android:id="@+id/imageViewAllgemeines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/ic_rabbit" />

            <TextView
                android:id="@+id/text_allgemeines_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/allgemeines_text"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

            <TextView
                android:id="@+id/text_allgemeines_text_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/allgemeines_text_info"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
